--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <name>[Simakov] Microservices Eureka Server</name>
 
     <parent>
-        <groupId>ru.simakov</groupId>
+        <groupId>ru.simakov.commons</groupId>
         <artifactId>microservices-commons</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
