--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,13 @@
         </dependency>
     </dependencies>
 
-    <properties>
-    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
